# saltadev-website

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  AGENTS.md  CLAUDE.md  README.md  biome.json  build.sh  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml
deploy/: GCP.md  RENDER.md  render.yaml
docker/: Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.prod  docker-compose.dev.yml  docker-compose.gcp.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.sonarqube.yml  docker-compose.staging.yml  entrypoint.sh
nginx/: dev.conf  production.conf  staging.conf
saltadev/: .env.development.example  .env.local.example  .env.production.example  .env.staging.example  .gitignore  manage.py  tailwind.config.js
saltadev/auth_login/: apps.py  urls.py  views.py
saltadev/auth_register/: apps.py  urls.py  views.py
saltadev/benefits/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
saltadev/code_of_conduct/: apps.py  urls.py  views.py
saltadev/content/: admin.py  apps.py  context_processors.py  models.py  redirects.py  signals.py
saltadev/dashboard/: apps.py  forms.py  urls.py  views.py
saltadev/events/: apps.py  forms.py  urls.py  views.py
saltadev/home/: apps.py  views.py
saltadev/locations/: __init__.py  admin.py  apps.py  models.py  urls.py  views.py
saltadev/password_reset/: apps.py  forms.py  models.py  urls.py  views.py
saltadev/saltadev/: __init__.py  asgi.py  celery.py  form_widgets.py  logging.py  sitemaps.py  urls.py  views.py  wsgi.py
saltadev/tailwind/: source.css
saltadev/templates/: 404.html  base.html  robots.txt
saltadev/user_notifications/: __init__.py  apps.py  context_processors.py  urls.py  views.py
saltadev/users/: adapters.py  (+13 more)
scripts/: security-scan.sh  verify_environment.sh
tests/: __init__.py  conftest.py  test_benefits.py  test_context_processors.py  test_credentials.py  test_dashboard.py  test_dashboard_forms.py  test_disposable_email.py  test_events.py  test_fingerprint.py  test_home.py  test_image_service.py  test_image_service_extended.py  test_logging.py  test_models.py  test_notifications.py  test_password_reset_validation.py  test_password_reset_views.py  test_password_validation.py  test_ratelimit.py  test_redirects.py  test_tasks.py  test_users_utils.py  test_views_auth.py  test_views_simple.py
(+107 files in other folders)
