[project]
name = "saltadev-website"
version = "0.1.0"
description = "SaltaDev website"
requires-python = ">=3.12"
dependencies = [
  "Django==5.2.11",
  "django-axes==8.3.1",
  "django-recaptcha==4.1.0",
  "gunicorn==23.0.0",
  "loguru==0.7.2",
  "pillow>=12.1.1",
  "psycopg2-binary==2.9.10",
  "python-dateutil==2.9.0.post0",
  "python-dotenv>=1.2.1",
  "redis==5.2.1",
  "whitenoise==6.8.2",
]

[project.optional-dependencies]
dev = [
  "bandit==1.9.3",
  "detect-secrets==1.5.0",
  "django-stubs==5.2.9",
  "django-stubs-ext==5.2.9",
  "mypy==1.11.2",
  "pre-commit==4.5.1",
  "pytest==9.0.2",
  "pytest-django==4.12.0",
  "ruff==0.15.1",
  "types-python-dateutil==2.9.0.20240906",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["RUF012"]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]
